# meet-transcriber-v3

./: DEBUGGING.md  GETTING_STARTED.md  README.md  index.html  package-lock.json  package.json  test_python_sidecar.sh  vite.config.ts
python/: requirements.txt
python/src/: __init__.py  main.py  streaming_transcription.py  transcription.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  devices.rs  macos_audio.m  mod.rs
src-tauri/src/commands/: audio.rs  llm.rs  meetings.rs  mod.rs  settings.rs  transcription.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/transcription/: mod.rs  sidecar.rs
src/components/history/: MeetingDetail.tsx  MeetingList.tsx  TranscriptViewer.tsx
src/components/recording/: AudioSourceSelector.tsx  RecordingControls.tsx  RecordingStatus.tsx
src/components/report/: ReportViewer.tsx
src/components/settings/: AudioSettings.tsx  LLMSettings.tsx
src/components/ui/: select.tsx
src/lib/: tauri-commands.ts  utils.ts
src/stores/: meetingsStore.ts  recordingStore.ts  settingsStore.ts
